// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqAlertSetStructuredList should render alert set alerts structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Alert"
    >
      <FeatureToggle(StructuredListCell)
        className="label_header object_item"
        title="View this Alert"
      >
        <div
          className="content"
        >
          <div
            className="wrap_text"
          />
        </div>
      </FeatureToggle(StructuredListCell)>
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertSetStructuredList should render alert set assigned structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set_assigned"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <FeatureToggle(StructuredListCell)
        className="content_value object_item"
        title=""
      >
        <div
          className="content"
        >
          <div
            className="wrap_text"
          />
        </div>
      </FeatureToggle(StructuredListCell)>
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      >
        Object class
      </FeatureToggle(StructuredListCell)>
      <FeatureToggle(StructuredListCell)
        className="content_value object_item"
        title=""
      >
        <div
          className="content"
        >
          <div
            className="multi_row_cell"
          >
            <div
              className="sub_row_item"
              key="0"
              title=""
            >
              <div
                className="sub_value"
              >
                <div
                  className="expand wrap_text"
                >
                  path1
                </div>
              </div>
            </div>
            <div
              className="sub_row_item"
              key="1"
              title=""
            >
              <div
                className="sub_value"
              >
                <div
                  className="expand wrap_text"
                >
                  path2
                </div>
              </div>
            </div>
            <div
              className="sub_row_item"
              key="2"
              title=""
            >
              <div
                className="sub_value"
              >
                <div
                  className="expand wrap_text"
                >
                  path3
                </div>
              </div>
            </div>
          </div>
        </div>
      </FeatureToggle(StructuredListCell)>
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertSetStructuredList should render alert set info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <FeatureToggle(StructuredListCell)
        className="content_value object_item"
        title=""
      >
        <div
          className="content"
        >
          <div
            className="expand wrap_text"
          >
            bar
          </div>
        </div>
      </FeatureToggle(StructuredListCell)>
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <FeatureToggle(StructuredListCell)
        className="content_value object_item"
        title=""
      >
        <div
          className="content"
        >
          <div
            className="expand wrap_text"
          >
            Mode
          </div>
        </div>
      </FeatureToggle(StructuredListCell)>
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertSetStructuredList should render alert set notes structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set_notes"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header object_item"
        title=""
      >
        <MiqStructuredListInputs
          action={[Function]}
          value={
            Object {
              "input": "text_area",
              "readonly": true,
              "rows": 4,
              "text": "text area description",
            }
          }
        />
      </FeatureToggle(StructuredListCell)>
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;
